--- a/client/styles/MovieList.css
+++ b/client/styles/MovieList.css
@@ -38,6 +38,7 @@
 
 .movie-cover {
   width: 100%;
+  height: 300px;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
@@ -73,6 +74,7 @@
   display: flex;
   overflow-x: auto;
   gap: 10px;
+  height: 410px;
   padding: 10px 20px;
   justify-content: center; 
   scroll-behavior: smooth;
@@ -142,4 +144,47 @@
 
 .add-movie-button:hover {
   background-color: #b00610;
+}
+
+
+.filter-buttons {
+  display: flex;
+  gap: 10px;
+  margin-top: 10px;
+}
+
+.filter-buttons button {
+  padding: 10px 20px;
+  font-size: 1rem;
+  background-color: #333;
+  color: white;
+  border: 1px solid #444;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.filter-buttons button.active {
+  background-color: #e50914;
+  color: white;
+}
+
+.filter-buttons button:hover {
+  background-color: #b00610;
+}
+
+.watched-button {
+  margin-top: 10px;
+  padding: 5px 10px;
+  font-size: 0.9rem;
+  background-color: #444;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.watched-button:hover {
+  background-color: #555;
 }
