--- a/client/styles/MovieList.css
+++ b/client/styles/MovieList.css
@@ -76,7 +76,7 @@
   gap: 10px;
   height: 410px;
   padding: 10px 20px;
-  justify-content: center; 
+  justify-content: flex-start; 
   scroll-behavior: smooth;
 }
 
